--- a/html/Start.html
+++ b/html/Start.html
@@ -39,9 +39,9 @@
             <p class="tittle3"> Explora tu siguiente lugar turistico</p>
         </div>
     <nav class="textbox">
-        <a href="#"><img src="/assets/beach-1.jpg" width="90%" class="image2, image3"></a> 
-        <a href="#"><img src="/assets/beach-2.jpg" width="90%" class="image2, image3"> </a>
-        <a href="#"><img src="/assets/beach-3.jpg" width="96%" class="image2, image3"> </a>
+        <a href="/html/List.html"><img src="/assets/beach-1.jpg" width="90%" class="image2, image3"></a> 
+        <a href="/html/List.html"><img src="/assets/beach-2.jpg" width="90%" class="image2, image3"> </a>
+        <a href="/html/List.html"><img src="/assets/beach-3.jpg" width="96%" class="image2, image3"> </a>
         
     </nav>
     <nav class="footer">
@@ -52,7 +52,7 @@
         </div>
 
         <div class="footericons">
-        <a href="#" class="tags2" ><box-icon name='facebook-square' type='logo' color='#f7fdfd' width:6; height:6;></box-icon></a>
+        <a href="#" class="tags2" ><box-icon name='facebook-square' type='logo' color='#f7fdfd'></box-icon></a>
         <a href="#" class="tags2" ><box-icon name='twitter' type='logo' color='#f7fdfd' ></box-icon></a>
         <a href="#" class="tags2" ><box-icon name='google-plus' type='logo' color='#f7fdfd' ></box-icon></a>
         <a href="#" class="tags2" ><box-icon name='instagram-alt' type='logo' color='#f7fdfd' ></box-icon></a>
